fix: web3auth modal not showing text

--- a/devlink/global.css
+++ b/devlink/global.css
@@ -2293,7 +2293,6 @@ h6 {
 p {
   margin-bottom: 10px;
   font-family: Inter;
-  color: hsla(0, 0.00%, 0.00%, 1.00);
 }
 
 a {
